--- a/templates/seller/profit_manage.html
+++ b/templates/seller/profit_manage.html
@@ -24,7 +24,7 @@
 {% block dashboard_content %}
     <div class="dashboard-content">
         <div class="dashboard-nav">
-            정산 / 수익관리
+            수익관리
             <div class="premium">
                 프리미엄 신청
             </div>
