--- a/templates/seller/product_manage.html
+++ b/templates/seller/product_manage.html
@@ -23,6 +23,7 @@
             var count = 0;
             {% for order_items in order_item_status_list %}
                 {% autoescape off %}
+                var counts = [0,0,0,0,0,0];
                 {% for order_item in order_items  %}
                     var counts = [0,0,0,0,0,0];
                     var temp = '{{ order_item.status }}'
