when pay by point, disable pay-option radio-button

--- a/templates/account/dashboard_purchase.html
+++ b/templates/account/dashboard_purchase.html
@@ -29,8 +29,9 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
                     mileage = $('.mileage-input input').autoNumeric('get');
                 }
                 var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
+                $('.pay-info .pay-option input[type="radio"]').attr("disabled",false);
                 if (total == 0 ) {
-                    $("#pay_by_point").attr("checked", true);
+                    $('.pay-info .pay-option input[type="radio"]').attr("disabled",true);
                     $('.buyer-info').show();
                 }
                 var _total = total + '<span>원</span>';
@@ -51,11 +52,11 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
                 if (point > sub_total) {
                     $('.point-input input').val(sub_total);
                     point = $('.point-input input').autoNumeric('get');
-                    $("#pay_by_point").prop("checked", true);
                 }
                 var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
+                $('.pay-info .pay-option input[type="radio"]').attr("disabled",false);
                 if (total == 0 ) {
-                    $("#pay_by_point").attr("checked", true);
+                    $('.pay-info .pay-option input[type="radio"]').attr("disabled",true);
                     $('.buyer-info').show();
                 }
                 var _total = total + '<span>원</span>';
@@ -73,8 +74,9 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
                     mileage = $(this).autoNumeric('get');
                 }
                 var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
+                $('.pay-info .pay-option input[type="radio"]').attr("disabled",false);
                 if (total == 0 ) {
-                    $("#pay_by_point").attr("checked", true);
+                    $('.pay-info .pay-option input[type="radio"]').attr("disabled",true);
                     $('.buyer-info').show();
                 }
                 var _total = total + '<span>원</span>';
@@ -92,8 +94,9 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
                     point = $(this).autoNumeric('get');
                 }
                 var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
+                $('.pay-info .pay-option input[type="radio"]').attr("disabled",false);
                 if (total == 0 ) {
-                    $("#pay_by_point").attr("checked", true);
+                    $('.pay-info .pay-option input[type="radio"]').attr("disabled",true);
                     $('.buyer-info').show();
                 }
                 var _total = total + '<span>원</span>';
@@ -104,80 +107,78 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
             // 결제하기 버튼
             $('.dashboard-purchase-bill .dashboard-charge-button').on('click', function (e) {
                 var is_checked = $('.pay-info .pay-option input[type="radio"]').is(':checked');
-                if (is_checked === true) {
-                    var mileage = $('.pay-info .discount #mileage').val();
-                    var point = $('.pay-info .discount #point').val();
-                    var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
-                    var radio_val =  $('.pay-info .pay-option input[type="radio"]:checked').val();
-                    if (total !== 0 && radio_val === 'point') {
-                        alert('전체 결제금액이 0원일 때만 선택가능합니다. 다른 결제정보를 선택해주세요');
-                    } else {
-                        var buyer_name = $('.buyer-info input[name="name"]').val();
-                        var buyer_phone = $('.buyer-info input[name="phone"]').val();
-                        var buyer_type = $('.pay-info .pay-option input:checked').val();
+                var mileage = $('.pay-info .discount #mileage').val();
+                var point = $('.pay-info .discount #point').val();
+                var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
+                if (is_checked === true || total === 0) {
+                    var buyer_name = $('.buyer-info input[name="name"]').val();
+                    var buyer_phone = $('.buyer-info input[name="phone"]').val();
+                    var buyer_type = $('.pay-info .pay-option input:checked').val();
+                    if (total === 0) {
+                        buyer_type = 'point';
+                    }
 
-                        $.ajax({
-                            type: 'get',
-                            data: {
-                                name: buyer_name,
-                                phone: buyer_phone
-                            }
-                        });
-
-                        if (buyer_name !== '' && buyer_phone !== '') {
-                            var mileage_info = $('.pay-info .discount #mileage').autoNumeric('get');
-                            var point_info = $('.pay-info .discount #point').autoNumeric('get');
-                            var order_info = "{{ order.order_id }}";
-
-                            var total_info = AjaxGetTransaction(e, order_info, mileage_info, point_info, buyer_type);
-                            var purchase_name = '';
-                            if ($('.item').length == 1) {
-                                purchase_name = $.trim($('.item .item-title').text());
-                            } else {
-                                purchase_name = $.trim($('.item:first-child .item-title').text()) + ' 외 ' + ($('.item').length-1).toString() + '개';
-                            }
-
-                            if (total_info !== '') {
-                                if (total_info > 0) {
-                                    IMP.request_pay({
-                                        pg: 'html5_inicis',
-                                        escrow: false,
-                                        digital: true,
-                                        pay_method: buyer_type,
-                                        merchant_uid: order_info,
-                                        name: '[소셜업]' + purchase_name,
-                                        amount: total_info,
-                                        buyer_email: "{{ user.email }}",
-                                        buyer_name: buyer_name,
-                                        buyer_tel: buyer_phone
-                                    }, function (rsp) {
-                                        if (rsp.success) {
-                                            //var msg = '결제가 완료되었습니다.';
-                                            //msg += '고유ID : ' + rsp.imp_uid;
-                                            //msg += '상점 거래ID : ' + rsp.merchant_uid;
-                                            //msg += '결제 금액 : ' + rsp.paid_amount;
-                                            //msg += '카드 승인번호 : ' + rsp.apply_num;
-                                            //console.log(msg);
-                                            ImpTransaction(e, rsp.merchant_uid, rsp.imp_uid, rsp.paid_amount);
-                                        } else {
-                                            var msg = '결제에 실패하였습니다.';
-                                            msg += '에러내용 : ' + rsp.error_msg;
-                                            alert(msg);
-                                            post_to_url('/dashboard/purchase/fail/', {"order_id":order_info, "csrfmiddlewaretoken":"{{ csrf_token }}"});
-                                        }
-                                    });
-                                }
-                                else if (total_info === 0){
-                                    alert("결제가 완료되었습니다.");
-                                    window.location.href='/dashboard/purchase/success'
-                                }
-                                else {
-
-                                }
-                            }
-                        } else {
-                            alert('결제자 정보를 입력해주세요.');
+                    $.ajax({
+                        type: 'get',
+                        data: {
+                            name: buyer_name,
+                            phone: buyer_phone
                         }
+                    });
+
+                    if (buyer_name !== '' && buyer_phone !== '') {
+                        var mileage_info = $('.pay-info .discount #mileage').autoNumeric('get');
+                        var point_info = $('.pay-info .discount #point').autoNumeric('get');
+                        var order_info = "{{ order.order_id }}";
+
+                        var total_info = AjaxGetTransaction(e, order_info, mileage_info, point_info, buyer_type);
+                        var purchase_name = '';
+                        if ($('.item').length == 1) {
+                            purchase_name = $.trim($('.item .item-title').text());
+                        } else {
+                            purchase_name = $.trim($('.item:first-child .item-title').text()) + ' 외 ' + ($('.item').length-1).toString() + '개';
+                        }
+
+                        if (total_info !== '') {
+                            if (total_info > 0) {
+                                IMP.request_pay({
+                                    pg: 'html5_inicis',
+                                    escrow: false,
+                                    digital: true,
+                                    pay_method: buyer_type,
+                                    merchant_uid: order_info,
+                                    name: '[소셜업]' + purchase_name,
+                                    amount: total_info,
+                                    buyer_email: "{{ user.email }}",
+                                    buyer_name: buyer_name,
+                                    buyer_tel: buyer_phone
+                                }, function (rsp) {
+                                    if (rsp.success) {
+                                        //var msg = '결제가 완료되었습니다.';
+                                        //msg += '고유ID : ' + rsp.imp_uid;
+                                        //msg += '상점 거래ID : ' + rsp.merchant_uid;
+                                        //msg += '결제 금액 : ' + rsp.paid_amount;
+                                        //msg += '카드 승인번호 : ' + rsp.apply_num;
+                                        //console.log(msg);
+                                        ImpTransaction(e, rsp.merchant_uid, rsp.imp_uid, rsp.paid_amount);
+                                    } else {
+                                        var msg = '결제에 실패하였습니다.';
+                                        msg += '에러내용 : ' + rsp.error_msg;
+                                        alert(msg);
+                                        post_to_url('/dashboard/purchase/fail/', {"order_id":order_info, "csrfmiddlewaretoken":"{{ csrf_token }}"});
+                                    }
+                                });
+                            }
+                            else if (total_info === 0){
+                                alert("결제가 완료되었습니다.");
+                                window.location.href='/dashboard/purchase/success'
+                            }
+                            else {
+
+                            }
+                        }
+                    } else {
+                        alert('결제자 정보를 입력해주세요.');
                     }
                 } else {
 {#                    if (true) {#}
@@ -369,10 +370,6 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
                         <label>
                             <input type="radio" class="radio" name="type" value="vbank" id="">
                             가상계좌 입금
-                        </label>
-                        <label>
-                            <input type="radio" class="radio" name="type" value="point" id="pay_by_point">
-                            전액 포인트
                         </label>
                     </div>
                 </div>
