modify category tab link

--- a/templates/header.html
+++ b/templates/header.html
@@ -62,24 +62,24 @@
 <div class="header_navigation">
     <ul>
         <li>
-            <button>
+            <a href="{% url 'category' 'blog' %}">
                 블로그
-            </button>
+            </a>
         </li>
         <li>
-            <button>
+            <a href="{% url 'category' 'facebook' %}">
                 페이스북
-            </button>
+            </a>
         </li>
         <li>
-            <button>
+            <a href="{% url 'category' 'instagram' %}">
                 인스타그램
-            </button>
+            </a>
         </li>
         <li>
-            <button>
+            <a href="{% url 'category' 'kakaostory' %}">
                 카카오스토리
-            </button>
+            </a>
         </li>
     </ul>
 </div>
